fixed bottom from clipping

--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Karla", sans-serif;
+  margin-bottom: 25px;
 }
 
 .container {
